--- a/demos/greed.html
+++ b/demos/greed.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="app" lang="en">
+<html lang="en">
   <head>
     <meta charset=" utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -46,8 +46,11 @@
         margin: 5px;
       }
     </style>
+    <link href="../dist/dataTable.css" media="all" rel="stylesheet" />
+    <link href="../dist/themes/material.css" media="all" rel="stylesheet" />
+    <link href="http://fontastic.s3.amazonaws.com/Jnf54BZCm7mSjGCxNRbfp3/icons.css" rel="stylesheet">
   </head>
-  <body ng-controller="HomeController">
+  <body ng-app="app" ng-controller="HomeController">
     <div class="container">
       <dtable options="options" rows="data" class="material"></dtable>
 
@@ -59,10 +62,13 @@
       </div>
     </div>
 
-    <script src="/assets/dataTable.js"></script>
+    <script src="../jspm_packages/system.js"></script>
+    <script src="../config.js"></script>
 
     <script>
-        var module = angular.module('app', [ 'data-table' ]);
+
+      System.import('dataTable').then(function(dt){
+        var module = angular.module('app', [ dt.default.name ]);
 
         module.controller('HomeController', function($scope, $http){
           $scope.options = {
@@ -78,11 +84,12 @@
             ]
           };
 
-          $http.get('/data/100.json').success(function(data) {
+          $http.get('/demos/data/100.json').success(function(data) {
             $scope.data = data.splice(0, 10);
           });
 
         });
+      });
     </script>
 
   </body>
